cros: Dismiss auth error when "Learn more" is clicked.

Bug: 879542
Change-Id: I3712f517ab3ee5f78eede3922335ac5e240b9816
Reviewed-on: https://chromium-review.googlesource.com/1217342
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590084}
Former-commit-id: 5b612ea75e67c2aef2038190cb60047c23576477